using English names for the endpoints
