# main.go
@@ -41,10 +41,10 @@ func main() {
 	controller := application.NewPetController(petCrudService, petStatsService)
 	healthController := application.NewHealthController()
 	router := mux.NewRouter()
-	router.HandleFunc("/creamascota", controller.CreatePet).Methods("POST")
-	router.HandleFunc("/lismascotas", controller.ListPets).Methods("GET")
-	router.HandleFunc("/kpidemascotas", controller.PetsKpi).Methods("GET")
-	router.HandleFunc("/health", healthController.HealthCheck).Methods("GET")
+	router.HandleFunc("/CreatePet", controller.CreatePet).Methods("POST")
+	router.HandleFunc("/ListPets", controller.ListPets).Methods("GET")
+	router.HandleFunc("/Kpis", controller.PetsKpi).Methods("GET")
+	router.HandleFunc("/Health", healthController.HealthCheck).Methods("GET")
 	router.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) { 
 		w.WriteHeader(200)
 		json.NewEncoder(w).Encode("Welcome! to use swagger go to: https://go-pet-api.herokuapp.com/swagger/index.html#/PetController")})
